--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -425,9 +425,9 @@
             <div></div>
         </div>
         <ul>
+            <li><a href="/add_admin">Add Admin</a></li>
             <li><a href="/add_dog">Add Dog</a></li>
             <li><a href="/add_services">Add Service</a></li>
-            <!-- <li><a href="#">Add Trainer</a></li> -->
             <li><a href="/admin4/add_competition">Add Competitions</a></li>
             <li><a href="/r">Track Revenue</a></li>
         </ul>
